--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -210,5 +210,44 @@
     <servlet-name>Review</servlet-name>
     <url-pattern>/Review</url-pattern>
   </servlet-mapping>
-  
+<servlet>
+    <description></description>
+    <display-name>Update</display-name>
+    <servlet-name>Update</servlet-name>
+    <servlet-class>com.login.Update</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Update</servlet-name>
+    <url-pattern>/Update</url-pattern>
+  </servlet-mapping>
+<servlet>
+    <description></description>
+    <display-name>View</display-name>
+    <servlet-name>View</servlet-name>
+    <servlet-class>com.login.View</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>View</servlet-name>
+    <url-pattern>/View</url-pattern>
+  </servlet-mapping>
+<servlet>
+    <description></description>
+    <display-name>Modifyquantity</display-name>
+    <servlet-name>Modifyquantity</servlet-name>
+    <servlet-class>com.login.Modifyquantity</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Modifyquantity</servlet-name>
+    <url-pattern>/Modifyquantity</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>View1</display-name>
+    <servlet-name>View1</servlet-name>
+    <servlet-class>com.login.View1</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>View1</servlet-name>
+    <url-pattern>/View1</url-pattern>
+  </servlet-mapping>
 </web-app>
